# cutting-problem

./: README.md  __init__.py  data_apilado.json  data_order1.json  data_order2.json  json_init.json  main.py  prueba1.json  prueba10.json  prueba11.json  prueba12.json  prueba13.json  prueba14.json  prueba15.json  prueba16.json  prueba16_sin_alg_apilado.json  prueba1_vertical.json  prueba2.json  prueba2_vertical.json  prueba3.json  prueba3_vertical.json  prueba4.json  prueba4_vertical.json  prueba5.json  prueba5_vertical.json  prueba6.json  prueba6_vertical.json  prueba7.json  prueba7_vertical.json  prueba8.json  prueba8_vertical.json  prueba9.json  pyproject.toml  sorted_structure.json
algorithms/: __init__.py  clean_optimization.py  nested_level.py  order_level1.py  order_level2.py  piece_by_cut.py  rearrange_pieces.py  retal_cuts_pieces.py  sanitation_cuts.py
visualization/: __init__.py  graphic.py
